--- a/minidlnad.conf
+++ b/minidlnad.conf
@@ -1,6 +1,6 @@
 port=8200
 media_dir=V,/data
-friendly_name=Docker DLNA server
+friendly_name=Docker DLNA Server
 album_art_names=Cover.jpg/cover.jpg/AlbumArtSmall.jpg/albumartsmall.jpg/AlbumArt.jpg/albumart.jpg/Album.jpg/album.jpg/Folder.jpg/folder.jpg/Thumb.jpg/thumb.jpg
 inotify=yes
 enable_tivo=no
